--- a/BCVP.Net8.Extension/BCVP.Net8.Extension.csproj
+++ b/BCVP.Net8.Extension/BCVP.Net8.Extension.csproj
@@ -1,17 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BCVP.Net8.Extension\BCVP.Net8.Extension.csproj" />
     <ProjectReference Include="..\BCVP.net8.Service\BCVP.net8.Service.csproj" />
   </ItemGroup>
 
